--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,18 +1138,22 @@
     "    jugadores_ordenados = sorted(contador_jugadores, key=lambda jugador: contador_jugadores[jugador], reverse=True)\n",
     "    return jugadores_ordenados\n",
     "\n",
-    "def solucion_greedy(pedidos_de_la_prensa):\n",
+    "def solucion_greedy(pedidos_de_la_prensa, constante):\n",
     "    tiempo = time.time()\n",
-    "    i = 0\n",
     "    solucionado = False\n",
     "    solucion = []\n",
     "    jugadores_ordenados = ordenar_jugadores_por_apariciones(pedidos_de_la_prensa)\n",
+    "\n",
     "    while not solucionado:\n",
-    "        jugador_actual = jugadores_ordenados[i]\n",
+    "        jugador_actual = jugadores_ordenados[0]\n",
     "        solucion.append(jugador_actual)\n",
-    "        if verificar_solucion_para_Scaloni(pedidos_de_la_prensa, solucion):\n",
+    "\n",
+    "        if verificar_solucion_para_Scaloni(constante, solucion):\n",
     "            solucionado = True\n",
-    "        i += 1\n",
+    "        else:\n",
+    "            pedidos_de_la_prensa = [lista for lista in pedidos_de_la_prensa if jugador_actual not in lista]\n",
+    "            jugadores_ordenados = ordenar_jugadores_por_apariciones(pedidos_de_la_prensa)\n",
+    "\n",
     "    tiempo = time.time() - tiempo\n",
     "    return solucion, tiempo"
    ]
@@ -1163,26 +1167,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
-      "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                3.8147e-05\n",
-      "7.txt                                   2                           4  No                                                2.3365e-05\n",
-      "10_pocos.txt                            3                           5  No                                                4.24385e-05\n",
-      "10_varios.txt                           6                          24  No                                                0.000234604\n",
-      "10_todos.txt                           10                          30  No                                                0.000155687\n",
-      "15.txt                                  4                           9  No                                                5.91278e-05\n",
-      "20.txt                                  5                           8  No                                                6.7234e-05\n",
-      "50.txt                                  6                          12  No                                                0.000183582\n",
-      "75.txt                                  8                          11  No                                                0.000155926\n",
-      "100.txt                                 9                          16  No                                                0.000404119\n",
-      "200.txt                                 9                          14  No                                                0.00153971\n"
+      "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?    Es Válida      Tiempo de ejecución (s)\n",
+      "-------------  --------------------------  --------------------------  ----------------------------------  -----------  -------------------------\n",
+      "5.txt                                   2                           2  Sí                                  Sí                         7.9155e-05\n",
+      "7.txt                                   2                           2  Sí                                  Sí                         3.98159e-05\n",
+      "10_pocos.txt                            3                           3  Sí                                  Sí                         0.000692368\n",
+      "10_varios.txt                           6                           7  No                                  Sí                         0.000144243\n",
+      "10_todos.txt                           10                          10  Sí                                  Sí                         0.000231504\n",
+      "15.txt                                  4                           5  No                                  Sí                         0.000151396\n",
+      "20.txt                                  5                           5  Sí                                  Sí                         0.000188589\n",
+      "50.txt                                  6                           7  No                                  Sí                         0.000504732\n",
+      "75.txt                                  8                           9  No                                  Sí                         0.000817299\n",
+      "100.txt                                 9                          11  No                                  Sí                         0.00147319\n",
+      "200.txt                                 9                          10  No                                  Sí                         0.00380564\n"
      ]
     }
    ],
@@ -1191,7 +1195,7 @@
     "resultados_obtenidos_greedy = []\n",
     "# Iterar sobre los pedidos de prensa de la catedra\n",
     "for archivo, value in pedidos_prensa_catedra.items():\n",
-    "  solucion, tiempo_ejecucion = solucion_greedy(value)\n",
+    "  solucion, tiempo_ejecucion = solucion_greedy(value, value)\n",
     "  resultados_obtenidos_greedy.append((archivo, solucion, tiempo_ejecucion))\n",
     "\n",
     "# Imprime los resultados obtenidos y los esperados en una tabla\n",
@@ -1199,11 +1203,11 @@
     "i = 0\n",
     "for resultado_esperado in resultados_esperados:\n",
     "  key, solucion, tiempo_ejecucion = resultados_obtenidos_greedy[i]\n",
-    "  es_correcto = \"Sí\" if resultado_esperado.cantidad_minima == len(solucion) and \\\n",
-    "    verificar_solucion_para_Scaloni(pedidos_prensa_catedra[key], solucion) else \"No\"\n",
-    "  resultados.append([resultado_esperado.nombre_archivo, resultado_esperado.cantidad_minima, len(solucion), es_correcto, tiempo_ejecucion]) \n",
+    "  es_valida = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_prensa_catedra[key], solucion) else \"No\"\n",
+    "  es_correcto = \"Sí\" if resultado_esperado.cantidad_minima == len(solucion) and es_valida else \"No\"\n",
+    "  resultados.append([resultado_esperado.nombre_archivo, resultado_esperado.cantidad_minima, len(solucion), es_correcto,es_valida, tiempo_ejecucion]) \n",
     "  i += 1\n",
-    "print(tabulate(resultados, headers=['Archivo', 'Cantidad mínima esperada', 'Cantidad mínima obtenida', 'Se obtuvo el resultado esperado?', 'Tiempo de ejecución (s)']))\n",
+    "print(tabulate(resultados, headers=['Archivo', 'Cantidad mínima esperada', 'Cantidad mínima obtenida', 'Se obtuvo el resultado esperado?', 'Es Válida', 'Tiempo de ejecución (s)']))\n",
     "  "
    ]
   },
@@ -1216,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1225,13 +1229,13 @@
      "text": [
       "Archivo              Cantidad minima obtenida  Es válida la solución?      Tiempo de ejecución (s)\n",
       "-----------------  --------------------------  ------------------------  -------------------------\n",
-      "5.txt                                       3  Sí                                      5.96046e-05\n",
-      "15.txt                                     10  Sí                                      0.000172377\n",
-      "15_un_jugador.txt                          14  Sí                                      0.000135899\n",
-      "20.txt                                     17  Sí                                      0.00171828\n",
-      "50.txt                                     26  Sí                                      0.000438929\n",
-      "30k.txt                                    31  Sí                                      0.0715678\n",
-      "300k.txt                                   31  Sí                                      0.342314\n"
+      "5.txt                                       3  Sí                                      0.000138521\n",
+      "15.txt                                      5  Sí                                      0.000267744\n",
+      "15_un_jugador.txt                          14  Sí                                      0.000446796\n",
+      "20.txt                                      8  Sí                                      0.000359058\n",
+      "50.txt                                     20  Sí                                      0.00100183\n",
+      "30k.txt                                    31  Sí                                      0.272337\n",
+      "300k.txt                                   31  Sí                                      2.27503\n"
      ]
     }
    ],
@@ -1240,7 +1244,7 @@
     "resultados_obtenidos_greedy_nuestros = []\n",
     "# Iterar sobre los pedidos de prensa de la catedra\n",
     "for archivo, value in pedidos_prensa_nuestro.items():\n",
-    "  solucion, tiempo_ejecucion = solucion_greedy(value)\n",
+    "  solucion, tiempo_ejecucion = solucion_greedy(value, value)\n",
     "  resultados_obtenidos_greedy_nuestros.append((archivo, solucion, tiempo_ejecucion))\n",
     "\n",
     "\n",
