Limpieza del código

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -400,14 +400,7 @@
     "    conjunto_minimo_para_Scaloni(pedidos_ordenados, [], 0, solucion)\n",
     "    tiempo_final = time.time()\n",
     "    tiempo_ejecucion = tiempo_final - tiempo_inicial\n",
-    "    return solucion, tiempo_ejecucion\n",
-    "\n",
-    "\n",
-    "# Ejemplo de uso\n",
-    "archivo_path = path_300k_nuestro\n",
-    "pedidos_de_la_prensa = obtener_pedidos_de_la_prensa(archivo_path)\n",
-    "solucion, tiempo_ejecucion = solucion_para_Scaloni(pedidos_de_la_prensa)\n",
-    "print(\"Solucion:\", solucion, \"\\nTiempo_ejecucion:\", tiempo_ejecucion, \"\\nCantidad periodistas:\", len(pedidos_de_la_prensa))"
+    "    return solucion, tiempo_ejecucion"
    ]
   },
   {
