Sección user BT

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -393,7 +393,7 @@
     "# Devuele:\n",
     "# - solucion: una lista con los jugadores que se seleccionaron como mejor solucion.\n",
     "# - tiempo_ejecucion: tiempo de ejecucion en segundos que tardo en encontrar la solucion.\n",
-    "def solucion_para_Scaloni(pedidos_de_prensa):\n",
+    "def solucion_para_Scaloni_BT(pedidos_de_prensa):\n",
     "    solucion = []\n",
     "    pedidos_ordenados = sorted(pedidos_de_prensa, key= len)\n",
     "    tiempo_inicial = time.time()\n",
@@ -423,7 +423,7 @@
     "\n",
     "# Iterar sobre los pedidos de prensa de la catedra\n",
     "for key, value in pedidos_prensa_catedra.items():\n",
-    "  solucion, tiempo_ejecucion = solucion_para_Scaloni(value)\n",
+    "  solucion, tiempo_ejecucion = solucion_para_Scaloni_BT(value)\n",
     "  resultados_obtenidos.append((key, solucion, tiempo_ejecucion))\n"
    ]
   },
@@ -482,7 +482,7 @@
     "resultados_obtenidos_nuestros = []\n",
     "# Iterar sobre los pedidos de prensa de la catedra\n",
     "for key, value in pedidos_prensa_nuestro.items():\n",
-    "  solucion, tiempo_ejecucion = solucion_para_Scaloni(value)\n",
+    "  solucion, tiempo_ejecucion = solucion_para_Scaloni_BT(value)\n",
     "  resultados_obtenidos_nuestros.append((key, solucion, tiempo_ejecucion))"
    ]
   },
@@ -689,7 +689,7 @@
     "    tiempos_ejecucion = []\n",
     "    i = 0\n",
     "    for pedidos in pedidos_prensa:\n",
-    "        _, tiempo_ejecucion = solucion_para_Scaloni(pedidos)\n",
+    "        _, tiempo_ejecucion = solucion_para_Scaloni_BT(pedidos)\n",
     "        tiempos_ejecucion.append(tiempo_ejecucion)\n",
     "        i += 1\n",
     "    return tiempos_ejecucion\n",
@@ -1250,6 +1250,32 @@
     "  resultados_nuestros_greedy.append([archivo + '.txt', len(solucion), es_correcto , tiempo_ejecucion]) \n",
     "  i += 1\n",
     "print(tabulate(resultados_nuestros_greedy, headers=['Archivo', 'Cantidad minima obtenida', 'Es válida la solución?', 'Tiempo de ejecución (s)']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sección para pruebas del Usuario"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backtracking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"sets/sets de la catedra/5.txt\"\n",
+    "pedidos_de_la_prensa = obtener_pedidos_de_la_prensa(path)\n",
+    "solucion = solucion_para_Scaloni_BT(pedidos_de_prensa)\n",
+    "print(solucion)\n"
    ]
   }
  ],
