--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,19 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Solucion: ['Riquelme', 'Colo Barco', 'Armani', 'Ogro Fabianni', 'Tucu Pereyra', 'Luka Romero', 'Burrito Ortega', 'Gallardo', 'Changuito Zeballos', \"Barcon't\", 'Beltran', 'Simeone', 'Buonanotte', 'El fantasma de la B', 'Cuti Romero', 'Dybala', 'Dibu', 'Buendia', 'Palermo', 'Soule', 'Zapelli', 'Wachoffisde Abila', 'Mauro Zarate', 'Colidio', 'Casco', 'Chiquito Romero', 'Pezzella', 'Langoni', 'Pity Martinez', 'Di Maria', 'Messi'] \n",
-      "Tiempo_ejecucion: 0.6210532188415527 \n",
-      "Cantidad periodistas: 300000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Obtiene el conjunto minimo de jugador que satisface a todos los pedidios_de_prensa.\n",
     "# Recibe:\n",
@@ -1119,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,13 +1258,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(['Dibu', 'Messi', 'Gallardo', 'Pity Martinez', 'El fantasma de la B', 'Beltran', 'Luka Romero', 'Burrito Ortega', \"Barcon't\"], 9.260772943496704)\n"
+     ]
+    }
+   ],
    "source": [
-    "path = \"sets/sets de la catedra/5.txt\"\n",
-    "pedidos_de_la_prensa = obtener_pedidos_de_la_prensa(path)\n",
+    "path = \"sets/sets de la catedra/200.txt\"\n",
+    "pedidos_de_prensa = obtener_pedidos_de_la_prensa(path)\n",
     "solucion = solucion_para_Scaloni_BT(pedidos_de_prensa)\n",
+    "print(solucion)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Greedy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(['Dibu', 'Cuti', 'Molina', 'Guido Rodriguez', 'Paredes', 'Palacios', 'Messi', 'Garnacho', 'Lautaro', 'Perrone'], 0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"sets/sets de la catedra/10_todos.txt\"\n",
+    "pedidos_de_prensa = obtener_pedidos_de_la_prensa(path)\n",
+    "solucion = solucion_greedy(pedidos_de_prensa, pedidos_de_prensa)\n",
     "print(solucion)\n"
    ]
   }
@@ -1295,7 +1320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
